--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
         "laravel": {
             "providers": [
                 "Aadhar\\Greeting\\GreetingServiceProvider"
-            ]
+            ],
+            "aliases": {
+                "Greet": "Aadhar\\Greeting\\GreetingFacade"
+            }
         }
     },
     "require": {}
